<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="TcoDaqMessage" Id="{c774f479-b779-0fac-1688-72bbb5a5729f}">
    <Declaration><![CDATA[(*~
	<docu>
		<summary>
			Complete daq details including time stamp, identity of the message provider, context cycle in which the daq was posted.			
		</summary>				
	</docu>	
~*)
TYPE TcoDaqMessage :
STRUCT
(*~
	<docu>
		<summary>
			Time when the message was posted.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}
	TimeStamp : DT;
(*~
	<docu>
		<summary>
			Data pointer.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}		
	Data : ARRAY[0..TcoDaq.MAX_DAQ_BYTE_LENGHT] OF BYTE;
(*~
	<docu>
		<summary>
			Data size in byte.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}		
	DataSize : INT;    
(*~
	<docu>
		<summary>
			Identity of the TcoObject that posted this message. 
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}	
	Identity : ULINT;	
(*~
	<docu>
		<summary>
			Context cycle in which the message was posted.
		</summary>				
	</docu>	
~*)
	{attribute clr [ReadOnly()]}
	Cycle : ULINT;
(*~
	<docu>
		<summary>			
			Indicates that the message is expected to be dequeed from the buffer.
		</summary>				
	</docu>	
~*)	
	ExpectDequeing : BOOL;	
	(*~
	<docu>
		<summary>		
			Stores message digest of this message text.
		</summary>				
	</docu>	
	~*)
	MessageDigest : DWORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>